--- a/thinkcmf-5.0.180626/public/themes/RY/icr/about.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/about.html
@@ -23,7 +23,7 @@
         <div class="bg">
             <div class="bg-d">
                 <div class="bg-item">
-                    <div class="bg-item-img">
+                    <div class="bg-item-img">“
                         <img src="/themes/RY/icr/imgs/way-icon.svg">
                     </div>
                     <div class="bg-item-title">
