小班12人，富文本宽度

--- a/thinkcmf-5.0.180626/public/themes/RY/icr/activity.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/activity.html
@@ -6,7 +6,7 @@
 <div class="main">
     <div class="item">
         <div class="activity">
-            <div class="h1">校区环境</div>
+            <div class="h1">活动详情</div>
             <div class="activity_content">
                     {$activity.desc|htmlspecialchars_decode|stripslashes}
             </div>
