立即申请该职位的链接

--- a/thinkcmf-5.0.180626/public/themes/RY/icr/recruit-detail.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/recruit-detail.html
@@ -35,7 +35,7 @@
              </div>
         </div>
         <div class="recruit-button">
-            <input type="button" value="立即申请该职位" />
+            <input type="button" value="立即申请该职位" onclick="location='http://www.icanread.asia/singapore/english/apply'"/>
         </div>
     </div>
 </div>
