--- a/thinkcmf-5.0.180626/public/themes/icr_wap/icr/recruit-detail.html
+++ b/thinkcmf-5.0.180626/public/themes/icr_wap/icr/recruit-detail.html
@@ -22,7 +22,7 @@
                     {$require}
                 </div>
             </div>
-            <div class="apply_button">立即申请该职位</div>
+            <div class="apply_button" onclick="location='http://www.icanread.asia/singapore/english/apply'">立即申请该职位</div>
         </div>
     </div>
 </section>
