--- a/thinkcmf-5.0.180626/public/themes/RY/icr/foot.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/foot.html
@@ -36,7 +36,7 @@
                 </div>
                 <div class="tel-phone">
                     <div class="tel-title">联系总部</div>
-                    <div class="tel-number">(+65)64841271</div>
+                    <div class="tel-number">(+65) 6484 1271</div>
                 </div>
                 <div class="clear"></div>
             </div>
