--- a/thinkcmf-5.0.180626/public/themes/icr_wap/icr/recruit-detail.html
+++ b/thinkcmf-5.0.180626/public/themes/icr_wap/icr/recruit-detail.html
@@ -3,7 +3,7 @@
 <section id="content">
     <div class="slide">
         <ul>
-            <li><img src="/themes/icr_wap/icr/imgs/banner-4.jpg"></li>
+            <li><img src="/themes/icr_wap/icr/imgs/banner-recruit.png"></li>
         </ul>
     </div>
     <div class="main">
