--- a/thinkcmf-5.0.180626/public/themes/icr_wap/icr/about.html
+++ b/thinkcmf-5.0.180626/public/themes/icr_wap/icr/about.html
@@ -9,15 +9,59 @@
         <div class="item">
             <div class="h1">什么是  I Can Read?</div>
             <div class="about_content">
-                <p>故事的开端，要从I Can Read创始人Earnshaw说起。Earnshaw的孩子被诊断患有阅读障碍，学校应试的教育环境让Earnshaw的家庭饱受煎熬。</p>
+                <p>故事的开端，要从 I Can Read 创始人 Earnshaw 说起。Earnshaw 的孩子被诊断患有阅读障碍，学校应试的教育环境让 Earnshaw 的家庭饱受煎熬。</p>
                 <br />
-                <p>Earnshaw是一位澳洲教育心理学家，作为父亲的Earnshaw，开始发起一项旨在探寻阅读和识字奥秘的学术研究，Earnshaw与另一位教育心理学专家Seargeant在这项研究中一起合作，这让Earnshaw看到了改变的希望。他们研究的初心，简单而美好，即能让Earnshaw的孩子能愉快地进行阅读。可以说，Earnshaw的孩子是I Can Read的第一位用户。</p>
+                <p>Earnshaw 是一位澳洲教育心理学家，作为父亲的 Earnshaw ，开始发起一项旨在探寻阅读和识字奥秘的学术研究，Earnshaw 与另一位教育心理学专家 Seargeant在这项研究中一起合作，这让 Earnshaw 看到了改变的希望。他们研究的初心，简单而美好，即能让 Earnshaw 的孩子能愉快地进行阅读。可以说，Earnshaw的孩子是 I Can Read 的第一位用户。</p>
                 <br />
-                <p>1995年，两人发现，阅读的痛苦其实普遍存在于大多数的学生身上。而如果有阅读障碍的孩子也可以轻松地领略阅读的奥妙，那么更多的孩子也必定能从中受益。终于，在十五年的研究之后，他们两人决定开始全新的探索——成立I Can Read。于是，这三个简单又生动的单词，成为了两人美好愿景下的品牌烙印。</p>
+                <p>1995年，两人发现，阅读的痛苦其实普遍存在于大多数的学生身上。而如果有阅读障碍的孩子也可以轻松地领略阅读的奥妙，那么更多的孩子也必定能从中受益。终于，在十五年的研究之后，他们两人决定开始全新的探索——成立 I Can Read。于是，这三个简单又生动的单词，成为了两人美好愿景下的品牌烙印。</p>
                 <br />
-                <p>作为一项系统、科学的阅读课程，I Can Read很快被新加坡教育部推荐，独有的特色课程走进了20个小学的课堂。如今，I Can Read的理念被越来越多的人所接受，适用于亚洲人的课程系统，让一个又一个I Can Read教学中心从地图上被点亮。</p>
+                <p>作为一项系统、科学的阅读课程，I Can Read 很快被新加坡教育部推荐，独有的特色课程走进了20个小学的课堂。如今，I Can Read的理念被越来越多的人所接受，适用于亚洲人的课程系统，让一个又一个 I Can Read 教学中心从地图上被点亮。</p>
                 <br />
-                <p>从I Can Read创立开始，十八年过去了，已经有超过25万孩子学习了I Can Read的课程，这是来自市场的肯定，也是I Can Read继续前行的动力。一个个孩子不断发出“I Can Read”的音节，那是我们彼此都倍感欣慰的时刻，也是I Can Read一个个新故事的延续。</p>
+                <p>从 I Can Read 创立开始，十八年过去了，已经有超过25万孩子学习了 I Can Read 的课程，这是来自市场的肯定，也是 I Can Read 继续前行的动力。一个个孩子不断发出“I Can Read”的音节，那是我们彼此都倍感欣慰的时刻，也是 I Can Read 一个个新故事的延续。</p>
+            </div>
+        </div>
+        <div class="item" style="margin-top: 0.3rem">
+            <div class="about-item  bg-1">
+                <div class="img"><img src="/themes/icr_wap/icr/imgs/way-icon.svg" /></div>
+                <div class="title">独特的教学方法</div>
+                <div class="content">
+                    <div>
+                    I Can Read 使用专有的编码系统 全球第一个以独特方式串联声音与字母簇的阅读学习系统 利用视觉线索来辅助语言学习
+                    </div>
+                </div>
+            </div>
+            <div class="about-item">
+                <div class="img"><img src="/themes/icr_wap/icr/imgs/Line1.svg" /></div>
+                <div class="title">我们的课程</div>
+                <div class="content">
+                    <div>
+                        基于学员个别语⾔能⼒以学员个别进度为重点结构化和渐进试教学法寓教于乐，以活动为教学中⼼
+                    </div>
+
+                </div>
+            </div>
+            <div class="about-item  bg-2">
+                <div class="img"><img src="/themes/icr_wap/icr/imgs/student-icon.svg" /></div>
+                <div class="title">我们的学生</div>
+                <div class="content">
+                    <div>可以准确地发⾳，有信⼼地表达⾃⼰更容易地掌握各类知识提升书写能⼒，提⾼考试成绩</div>
+                </div>
+            </div>
+        </div>
+        <div class="item">
+            <div class="about_item">
+                <div class="img"><img src="/themes/icr_wap/icr/imgs/contact_img1.svg" /></div>
+                <div class="title">电话：(+65) 6484 1271</div>
+            </div>
+            <a href="http://www.icanread.asia/franchise/" target="_blank">
+                <div class="about_item">
+                    <div class="img"><img src="/themes/icr_wap/icr/imgs/contact_img2.svg" /></div>
+                    <div class="title">合作加盟</div>
+                </div>
+            </a>
+            <div class="about_item">
+                <div class="img"><img src="/themes/icr_wap/icr/imgs/contact_img3.svg" /></div>
+                <div class="title">人才招聘</div>
             </div>
         </div>
     </div>
