--- a/thinkcmf-5.0.180626/public/themes/icr_wap/icr/about.html
+++ b/thinkcmf-5.0.180626/public/themes/icr_wap/icr/about.html
@@ -20,6 +20,50 @@
                 <p>从 I Can Read 创立开始，十八年过去了，已经有超过25万孩子学习了 I Can Read 的课程，这是来自市场的肯定，也是 I Can Read 继续前行的动力。一个个孩子不断发出“I Can Read”的音节，那是我们彼此都倍感欣慰的时刻，也是 I Can Read 一个个新故事的延续。</p>
             </div>
         </div>
+        <div class="item" style="margin-top: 0.3rem">
+            <div class="about-item  bg-1">
+                <div class="img"><img src="/themes/icr_wap/icr/imgs/way-icon.svg" /></div>
+                <div class="title">独特的教学方法</div>
+                <div class="content">
+                    <div>
+                    I Can Read 使用专有的编码系统 全球第一个以独特方式串联声音与字母簇的阅读学习系统 利用视觉线索来辅助语言学习
+                    </div>
+                </div>
+            </div>
+            <div class="about-item">
+                <div class="img"><img src="/themes/icr_wap/icr/imgs/course-icon.svg" /></div>
+                <div class="title">我们的课程</div>
+                <div class="content">
+                    <div>
+                        基于学员个别语⾔能⼒以学员个别进度为重点结构化和渐进试教学法寓教于乐，以活动为教学中⼼
+                    </div>
+
+                </div>
+            </div>
+            <div class="about-item  bg-2">
+                <div class="img"><img src="/themes/icr_wap/icr/imgs/student-icon.svg" /></div>
+                <div class="title">我们的学生</div>
+                <div class="content">
+                    <div>可以准确地发⾳，有信⼼地表达⾃⼰更容易地掌握各类知识提升书写能⼒，提⾼考试成绩</div>
+                </div>
+            </div>
+        </div>
+        <div class="item">
+            <div class="about_item">
+                <div class="img"><img src="/themes/icr_wap/icr/imgs/contact_img1.svg" /></div>
+                <div class="title">电话：(+65) 6484 1271</div>
+            </div>
+            <a href="http://www.icanread.asia/franchise/" target="_blank">
+                <div class="about_item">
+                    <div class="img"><img src="/themes/icr_wap/icr/imgs/contact_img2.svg" /></div>
+                    <div class="title">合作加盟</div>
+                </div>
+            </a>
+            <div class="about_item">
+                <div class="img"><img src="/themes/icr_wap/icr/imgs/contact_img3.svg" /></div>
+                <div class="title">人才招聘</div>
+            </div>
+        </div>
     </div>
 </section>
 <include file="themes/icr_wap/icr/foot.html" />
