--- a/thinkcmf-5.0.180626/public/themes/RY/icr/foot.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/foot.html
@@ -74,14 +74,14 @@
                         <div>
                             <img src="/themes/RY/icr/imgs/singapore-flag.svg" />
                             <span style="font-family: PlutoSans">Singapore</span>
-                            <span>新家坡官网</span>
+                            <span>新加坡官网</span>
                         </div>
                     </li>
                     <li>
                         <div>
                             <img src="/themes/RY/icr/imgs/thailand-flag.svg" />
                             <span style="font-family: PlutoSans">Thailand</span>
-                            <span>印度官网</span>
+                            <span>泰国官网</span>
                         </div>
                     </li>
                     <li>
@@ -89,6 +89,13 @@
                             <img src="/themes/RY/icr/imgs/vietnam-flag.svg" />
                             <span style="font-family: PlutoSans">Vietnam</span>
                             <span>越南官网</span>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <img src="/themes/RY/icr/imgs/Bangladesh_flag.svg" />
+                            <span style="font-family: PlutoSans">Bangladesh</span>
+                            <span>孟加拉官网</span>
                         </div>
                     </li>
                 </ul>
