--- a/thinkcmf-5.0.180626/public/themes/RY/icr/foot.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/foot.html
@@ -74,14 +74,14 @@
                         <div>
                             <img src="/themes/RY/icr/imgs/singapore-flag.svg" />
                             <span><a target="_blank"  href="http://www.icanread.asia/singapore/english">Singapore</a></span>
-                            <span><a target="_blank"  href="http://www.icanread.asia/singapore/english">新家坡官网</a></span>
+                            <span><a target="_blank"  href="http://www.icanread.asia/singapore/english">新加坡官网</a></span>
                         </div>
                     </li>
                     <li>
                         <div>
                             <img src="/themes/RY/icr/imgs/thailand-flag.svg" />
                             <span><a target="_blank"  href="http://www.icanread.asia/thailand/english">Thailand</a></span>
-                            <span><a target="_blank"  href="http://www.icanread.asia/thailand/thai">印度官网</a></span>
+                            <span><a target="_blank"  href="http://www.icanread.asia/thailand/thai">泰国官网</a></span>
                         </div>
                     </li>
                     <li>
